oscen-macros/tests/ui/cross_rate_kind_mismatch.stderr
warning: the feature `inherent_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
 --> tests/ui/cross_rate_kind_mismatch.rs:1:12
  |
1 | #![feature(inherent_associated_types)]
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #8995 <https://github.com/rust-lang/rust/issues/8995> for more information
  = note: `#[warn(incomplete_features)]` on by default

error[E0277]: no cross-rate kernel for EventKind -> StreamKind with policy DefaultPolicy
  --> tests/ui/cross_rate_kind_mismatch.rs:37:1
   |
37 | / graph! {
38 | |     name: KindMismatch;
39 | |     nodes {
40 | |         ee = EventEmitter::new();
...  |
46 | | }
   | |_^ edge has no resampler
   |
   = help: the trait `CrossRateKernel<EventKind, StreamKind, DefaultPolicy, 4, UpDir>` is not implemented for `()`
   = note: valid kind pairs are: (StreamKind, StreamKind), (ValueKind, ValueKind), (ValueKind, StreamKind), (EventKind, EventKind)
   = help: the following other types implement trait `CrossRateKernel<SrcKind, DstKind, Policy, N, Dir, Frame>`:
             `()` implements `CrossRateKernel<EventKind, EventKind, DefaultPolicy, 1, DownDir>`
             `()` implements `CrossRateKernel<EventKind, EventKind, DefaultPolicy, 1, UpDir>`
             `()` implements `CrossRateKernel<EventKind, EventKind, DefaultPolicy, 2, DownDir>`
             `()` implements `CrossRateKernel<EventKind, EventKind, DefaultPolicy, 2, UpDir>`
             `()` implements `CrossRateKernel<EventKind, EventKind, DefaultPolicy, 4, DownDir>`
             `()` implements `CrossRateKernel<EventKind, EventKind, DefaultPolicy, 4, UpDir>`
             `()` implements `CrossRateKernel<EventKind, EventKind, DefaultPolicy, 8, DownDir>`
             `()` implements `CrossRateKernel<EventKind, EventKind, DefaultPolicy, 8, UpDir>`
           and $N others
note: required by a bound in `_assert_supported`
  --> tests/ui/cross_rate_kind_mismatch.rs:44:9
   |
44 |         ee.gate -> ss.input;  // EventOutput -> StreamInput across rates: should not compile.
   |         ^^ required by this bound in `_assert_supported`

error[E0277]: no connection from EventOutput to f32
  --> tests/ui/cross_rate_kind_mismatch.rs:37:1
   |
37 | / graph! {
38 | |     name: KindMismatch;
39 | |     nodes {
40 | |         ee = EventEmitter::new();
...  |
46 | | }
   | |_^ incompatible endpoint pair
   |
   = help: the trait `ConnectEndpoints<EventOutput, f32>` is not implemented for `()`
   = note: supported: matching Copy payloads (f32, Frame<N>, arrays), EventOutput -> EventInput/ArrayVec<EventInstance, 32>
   = help: the following other types implement trait `ConnectEndpoints<Src, Dst>`:
             `()` implements `ConnectEndpoints<&T, T>`
             `()` implements `ConnectEndpoints<EventInput<S>, EventInput<D>>`
             `()` implements `ConnectEndpoints<EventOutput<S>, EventInput<D>>`
             `()` implements `ConnectEndpoints<EventOutput<T>, arrayvec::arrayvec::ArrayVec<EventInstance, 32>>`
             `()` implements `ConnectEndpoints<Frame<C>, Frame<C>>`
             `()` implements `ConnectEndpoints<[EventOutput<S>; N], [EventInput<D>; N]>`
             `()` implements `ConnectEndpoints<[Frame<C>; N], [Frame<C>; N]>`
             `()` implements `ConnectEndpoints<[f32; N], [f32; N]>`
           and $N others
   = note: this error originates in the macro `graph` (in Nightly builds, run with -Z macro-backtrace for more info)
